--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
-  "name": "clone-tabnews",
-  "version": "1.0.0",
-  "description": "O projeto foi criado utilizando os mais recentes padrões de mercado, aplicando as melhores práticas de desenvolvimento de software e integração contínua. Com uma arquitetura escalável e moderna, este sistema é construído para fornecer uma solução robusta e eficiente",
-  "main": "index.js",
-  "scripts": {
-    "dev": "next dev",
-    "lint:check": "prettier --check .",
-    "lint:fix": "prettier --write .",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "next": "^13.1.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "prettier": "^3.3.3"
-  }
+    "name": "clone-tabnews",
+    "version": "1.0.0",
+    "description": "O projeto foi criado utilizando os mais recentes padrões de mercado, aplicando as melhores práticas de desenvolvimento de software e integração contínua. Com uma arquitetura escalável e moderna, este sistema é construído para fornecer uma solução robusta e eficiente",
+    "main": "index.js",
+    "scripts": {
+        "dev": "next dev",
+        "lint:check": "prettier --check .",
+        "lint:fix": "prettier --write .",
+        "test": "jest",
+        "test:watch": "jest --watch"
+    },
+    "author": "",
+    "license": "MIT",
+    "dependencies": {
+        "next": "^13.1.6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "jest": "^29.6.2",
+        "prettier": "^3.3.3"
+    }
 }
