--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "O projeto foi criado utilizando os mais recentes padrões de mercado, aplicando as melhores práticas de desenvolvimento de software e integração contínua. Com uma arquitetura escalável e moderna, este sistema é construído para fornecer uma solução robusta e eficiente",
     "main": "index.js",
     "scripts": {
-        "dev": "npm run services:up && next dev",
+        "dev": "npm run services:up && npm run wait-for-postgres && npm run migration:up && next dev",
         "services:up": "docker compose -f infra/compose.yaml up -d",
         "services:stop": "docker compose -f infra/compose.yaml stop",
         "services:down": "docker compose -f infra/compose.yaml down",
@@ -13,7 +13,8 @@
         "test": "jest --runInBand",
         "test:watch": "jest --watchAll --runInBand",
         "migration:create": "node-pg-migrate --m infra/migrations create ",
-        "migration:up": "node-pg-migrate --m infra/migrations --envPath .env.development up"
+        "migration:up": "node-pg-migrate --m infra/migrations --envPath .env.development up",
+        "wait-for-postgres": "node infra/scripts/wait-for-postgres.js"
     },
     "author": "",
     "license": "MIT",
