--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -16,19 +16,6 @@ jobs:
             - run: npm ci
 
             - run: npm run lint:prettier:check
-    eslint:
-        name: Eslint
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v4
-
-            - uses: actions/setup-node@v4
-              with:
-                  node-version: "lts/hydrogen"
-
-            - run: npm ci
-
-            - run: npm run lint:eslint:check
 
     commitlint:
         name: Commitlint
@@ -45,3 +32,17 @@ jobs:
             - run: npm ci
 
             - run: npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
+
+    secretlint:
+        name: Secretlint
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+
+            - uses: actions/setup-node@v4
+              with:
+                  node-version: "lts/hydrogen"
+
+            - run: npm ci
+
+            - run: npx secretlint --maskSecrets "**/*"
