--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "test": "npm run services:up && concurrently --names next,jest --hide next --kill-others --success command-jest \"next dev\" \"jest --runInBand --verbose\"",
         "test:watch": "jest --watchAll --runInBand",
         "migration:create": "node-pg-migrate --m infra/migrations create ",
-        "migration:up": "node-Spg-migrate --m infra/migrations --envPath .env.development up",
+        "migration:up": "node-pg-migrate --m infra/migrations --envPath .env.development up",
         "wait-for-postgres": "node infra/scripts/wait-for-postgres.js",
         "prepare": "husky",
         "commit": "cz"
@@ -25,29 +25,31 @@
     "author": "",
     "license": "MIT",
     "dependencies": {
-        "@next/env": "15.0.2",
+        "@next/env": "15.2.4",
         "async-retry": "1.3.3",
-        "dotenv": "16.4.4",
-        "dotenv-expand": "11.0.6",
-        "next": "13.1.6",
-        "node-pg-migrate": "6.2.2",
-        "pg": "8.11.3",
-        "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "dotenv": "16.4.7",
+        "dotenv-expand": "12.0.1",
+        "next": "15.2.4",
+        "node-pg-migrate": "7.9.1",
+        "pg": "8.14.1",
+        "react": "19.1.0",
+        "react-dom": "19.1.0"
     },
     "devDependencies": {
-        "@commitlint/cli": "19.3.0",
-        "@commitlint/config-conventional": "19.2.2",
+        "@commitlint/cli": "19.8.0",
+        "@commitlint/config-conventional": "19.8.0",
+        "@secretlint/secretlint-rule-preset-recommend": "^9.2.1",
         "commitizen": "4.3.1",
-        "concurrently": "8.2.2",
+        "concurrently": "9.1.2",
         "cz-conventional-changelog": "3.3.0",
-        "eslint": "8.57.0",
-        "eslint-config-next": "14.2.4",
-        "eslint-config-prettier": "9.1.0",
-        "eslint-plugin-jest": "28.6.0",
-        "husky": "9.1.4",
-        "jest": "29.6.2",
-        "prettier": "3.3.3"
+        "eslint": "9.23.0",
+        "eslint-config-next": "15.2.4",
+        "eslint-config-prettier": "10.1.1",
+        "eslint-plugin-jest": "28.11.0",
+        "husky": "9.1.7",
+        "jest": "29.7.0",
+        "prettier": "3.5.3",
+        "secretlint": "^9.2.1"
     },
     "config": {
         "commitizen": {
